--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -3,7 +3,7 @@
 /* -------------------  MOBILE  --------------------- */
 
 body {
-  font-family: Arial;
+  font-family: 'JetBrains Mono', monospace;
   font-size: 16px;
   color: #F9FAFB;
   background-color: #111827;
